[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "NHANES-DATA-API"
version = "0.1.0"
description = "A tool for programmatic access to NHANES downloadable datasets"
authors = ["Kuzi Rusere <kkrusere@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kkrusere/NHANES-Data-API"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.0"
pandas = "2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
