[metadata]
name = NHANES-DATA-API
version = 0.1.1
author = Kuzi Rusere
author_email = kkrusere@gmail.com
description = A tool for programmatic access to NHANES downloadable datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kkrusere/NHANES-Data-API
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy==1.26.0
    pandas==2.1.1

[options.package_data]
* = *.md

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest

[options.data_files]
docs = README.md

project_urls =
    Documentation = https://github.com/kkrusere/NHANES-Data-API/blob/main/docs/index.md
    Bug Tracker = https://github.com/kkrusere/NHANES-Data-API/blob/main/issues/NHANE-DATA-API_issues.md
