[metadata]
name = nhanes_data_api
version = 0.1.0
author = Kuzi Rusere
author_email = kkrusere@gmail.com
description = A tool for programmatic access to NHANES downloadable datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kkrusere/NHANES-Data-API
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas

[options.package_data]
* = *.md

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest

[options.data_files]
docs = README.md
